# liberbib

./: README.md  pyproject.toml
liberbib/: cli.py  library_manager.py
