[project]
name = "liberbib"
version = "0.1.0"
description = "A tool for managing your bibliography."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.2",
    "levenshtein>=0.26.1",
    "openalex",
    "pydantic>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
]

[tool.uv.sources]
openalex = { git = "https://github.com/j6k4m8/openalex" }

[project.scripts]
liberbib = "liberbib.cli:cli"
